crates/core/tests/compile_fail/fact_mutate.stderr
error[E0616]: field `key` of struct `converge_core::Fact` is private
 --> tests/compile_fail/fact_mutate.rs:9:10
  |
9 |     fact.key = ContextKey::Seeds;
  |          ^^^ private field
